🔤 Add contact form strings

--- a/lib/localization/app_ar.arb
+++ b/lib/localization/app_ar.arb
@@ -27,6 +27,10 @@
     "subject": "الموضوع",
     "message": "الرسالة",
     "send": "أرسل",
+    "plz_enter_email": "الرجاء إدخال عنوان بريدك الالكتروني",
+    "plz_enter_subject": "الرجاء إدخال موضوع رسالتك",
+    "plz_enter_msg": "الرجاء إدخال رسالتك",
+    "invalid_email": "عنوان البريد الالكتروني غير صالح",
 
     "linkedin": "لينكد إن",
     "github": "جيت هب",
