🔤 Add 'more_on_gh' & 'email_copied' entries

--- a/lib/localization/app_ar.arb
+++ b/lib/localization/app_ar.arb
@@ -6,9 +6,6 @@
 
     "landing_hi": "هلا والله 👋، أنا",
     "landing_about": "مطور برمجيات مقيم في الرياض",
-
-    "selected_projects": "مشاريع مختارة",
-    "view_project": "عرض المشروع",
     
     "education": "التعليم",
     "bsc_ITc": "بكالوريوس تكنولوجيا المعلومات والحوسبة",
@@ -22,6 +19,10 @@
     "fluent": "طَلِق",
     "excellent": "ممتاز",
 
+    "selected_projects": "مشاريع مختارة",
+    "view_project": "عرض المشروع",
+    "more_on_gh": "والمزيد على GitHub",
+
     "contact_me": "تواصل معي",
     "email_address": "البريد الإلكتروني",
     "subject": "الموضوع",
@@ -31,10 +32,11 @@
     "plz_enter_subject": "الرجاء إدخال موضوع رسالتك",
     "plz_enter_msg": "الرجاء إدخال رسالتك",
     "invalid_email": "عنوان البريد الالكتروني غير صالح",
+    "email_copied": "تم نسخ عنوان البريد الالكتروني: ",
 
-    "linkedin": "لينكد إن",
-    "github": "جيت هب",
-    "stackoverflow": "ستاك اوڤرفلو",
+    "linkedin": "LinkedIn",
+    "github": "GitHub",
+    "stackoverflow": "StackOverflow",
     "email": "الأيميل",
 
     "page_not_found": "لم يتم العثور على الصفحة",
