🐛 Give feedback after sending a message

--- a/lib/localization/app_ar.arb
+++ b/lib/localization/app_ar.arb
@@ -28,6 +28,7 @@
     "subject": "الموضوع",
     "message": "الرسالة",
     "send": "أرسل",
+    "message_sent": "تم إرسال الرسالة",
     "plz_enter_email": "الرجاء إدخال عنوان بريدك الالكتروني",
     "plz_enter_subject": "الرجاء إدخال موضوع رسالتك",
     "plz_enter_msg": "الرجاء إدخال رسالتك",
