✨ Add locale attribute to MyApp

--- a/lib/localization/app_ar.arb
+++ b/lib/localization/app_ar.arb
@@ -53,7 +53,7 @@
     "year": "سنة",
 
     "full_name": "ليث شونو",
-    "first_name": "ليث",
+    "first_name": "لـيـث",
 
     "ar": "عربي",
     "en": "English"
